Documentation info updated.
